--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   flutter_dotenv: any
   intl: ^0.17.0
   shared_preferences: ^2.0.6
+  flutter_widget_from_html_core: ^0.8.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
